Fix Letter spacing on similar posts bloggers

--- a/src/components/SimilarPosts/styles.scss
+++ b/src/components/SimilarPosts/styles.scss
@@ -77,6 +77,10 @@
   }
 }
 
+.blogs-page__content {
+
+}
+
 @media screen and (max-width: 1250px) {
   .similar-posts {
     &__wrapper {
